feat: create endpoint for get transaction by user id
